Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h3>
 <a id="技術書典の出版物について" class="anchor" href="#%E6%8A%80%E8%A1%93%E6%9B%B8%E5%85%B8%E3%81%AE%E5%87%BA%E7%89%88%E7%89%A9%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>技術書典の出版物について</h3>
 
-<p>僕たちが溜め込んだウェブクローラー開発における知見を披露します。</p>
+<p>僕たちが溜め込んだウェブクローラー開発における知見を披露しようと思いましたが、落選しましたので頒布物はありません。</p>
 
 <h3>
 <a id="技術書典について" class="anchor" href="#%E6%8A%80%E8%A1%93%E6%9B%B8%E5%85%B8%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>技術書典について</h3>
